Оптимизировал работу с коллизиями. QuadTree

--- a/ProjectGame/ProjectGame.csproj
+++ b/ProjectGame/ProjectGame.csproj
@@ -19,6 +19,7 @@
         <EmbeddedResource Include="Icon.bmp" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Ensure.That" Version="11.0.0-p3" />
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
         <PackageReference Include="QuadTrees" Version="1.0.4" />
